Avances en la fase 3
Gran commit

--- a/ProyectoDWS/src/main/resources/static/styles/error.css
+++ b/ProyectoDWS/src/main/resources/static/styles/error.css
@@ -1,4 +1,5 @@
 /* Styles for error pages */
+/*
 body {
     font-family: sans-serif;
     margin: 0;
@@ -42,3 +43,4 @@ header {
 .error-container a:hover {
     background-color: #d0d0d0;
 }
+*/
