--- a/ProyectoDWS/src/main/resources/templates/courses/deleted_course.html
+++ b/ProyectoDWS/src/main/resources/templates/courses/deleted_course.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head th:replace="layout/layout :: head('Cursos - AcademiaSaber', '/styles/courses/deleted_course.css')"></head>
+<head th:replace="layout/layout :: head('Cursos - AcademiaSaber', '/styles/courses/deleted_course.css', '')"></head>
 <body>
 <div th:replace="layout/layout :: header"></div>
-<main>
-    <div class="wrapper">
-        <div class="container">
-            <p>Course has been deleted.</p>
-        </div>
-        <div class="button">
-            <a href="/">Back</a>
+<main class="container py-5">
+    <div class="row justify-content-center">
+        <div class="col-md-6">
+            <div class="card shadow">
+                <div class="card-body text-center">
+                    <p class="mb-4">Course has been deleted.</p>
+                    <a href="/" class="btn btn-secondary">Back</a>
+                </div>
+            </div>
         </div>
     </div>
 </main>
