--- a/ProyectoDWS/src/main/resources/templates/courses/enrolled_courses.html
+++ b/ProyectoDWS/src/main/resources/templates/courses/enrolled_courses.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head th:replace="layout/layout :: head('Cursos - AcademiaSaber', '/styles/courses/enrolled_courses.css')"></head>
+<head th:replace="layout/layout :: head('Cursos - AcademiaSaber', '/styles/courses/enrolled_courses.css', '')"></head>
 <body>
 <div th:replace="layout/layout :: header"></div>
-<main>
-    <div class="container">
-        <p>Te has matriculado correctamente en el curso</p>
-        <br>
-        <div class="button">
-            <a href="/courses">Volver a la lista de cursos</a>
+<main class="container py-5">
+    <div class="row justify-content-center">
+        <div class="col-md-6">
+            <div class="card shadow">
+                <div class="card-body text-center">
+                    <p class="mb-4">Te has matriculado correctamente en el curso</p>
+                    <a href="/courses" class="btn btn-secondary">Volver a la lista de cursos</a>
+                </div>
+            </div>
         </div>
     </div>
 </main>
 <div th:replace="layout/layout :: footer"></div>
 </body>
 </html>
-
