--- a/ProyectoDWS/src/main/resources/templates/courses/enrolled_students.html
+++ b/ProyectoDWS/src/main/resources/templates/courses/enrolled_students.html
@@ -1,15 +1,20 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head th:replace="layout/layout :: head('Estudiantes Matriculados - AcademiaSaber', '/styles/courses/enrolled_students.css')"></head>
+<head th:replace="layout/layout :: head('Estudiantes Matriculados - AcademiaSaber', '/styles/courses/enrolled_students.css', '')"></head>
 <body>
 <div th:replace="layout/layout :: header"></div>
-<main>
-    <h2>Estudiantes Matriculados</h2>
-    <ul>
-        <li th:each="student : ${enrolledStudents}" th:text="${student}"></li>
-    </ul>
-    <a href="/courses">Volver a la lista de cursos</a>
+<main class="container py-5">
+    <div class="card shadow mb-4">
+        <div class="card-body">
+            <h2 class="card-title mb-4">Estudiantes Matriculados</h2>
+            <ul class="list-group mb-4">
+                <li class="list-group-item" th:each="student : ${enrolledStudents}" th:text="${student}"></li>
+            </ul>
+            <a href="/courses" class="btn btn-secondary">Volver a la lista de cursos</a>
+        </div>
+    </div>
 </main>
 <div th:replace="layout/layout :: footer"></div>
 </body>
 </html>
+
