--- a/ProyectoDWS/src/main/resources/templates/courses/manage_form.html
+++ b/ProyectoDWS/src/main/resources/templates/courses/manage_form.html
@@ -1,24 +1,33 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head th:replace="layout/layout :: head('Cursos - AcademiaSaber', '/styles/courses/manage_form.css')"></head>
+<head th:replace="layout/layout :: head('Cursos - AcademiaSaber', '/styles/courses/manage_form.css', '')"></head>
 <body>
 <div th:replace="layout/layout :: header"></div>
-<main>
-    {{#welcome}}
-    <h1>Welcome!</h1>
-    {{/welcome}}
+<main class="container py-5">
+    <div class="card shadow">
+        <div class="card-body">
+            {{#welcome}}
+            <h1 class="card-title text-center mb-4">Welcome!</h1>
+            {{/welcome}}
 
-    <h1>Courses</h1>
-    {{#courses}}
-    <a href="course/{{id}}">{{title}}</a><br>
-    {{/courses}}
+            <h2 class="card-subtitle mb-4">Courses</h2>
+            <div class="list-group mb-4">
+                {{#courses}}
+                <a href="course/{{id}}" class="list-group-item list-group-item-action">{{title}}</a>
+                {{/courses}}
+            </div>
 
-    {{^courses}}
-    <p>No courses yet.</p>
-    {{/courses}}
+            {{^courses}}
+            <div class="alert alert-info">
+                <p class="mb-0">No courses yet.</p>
+            </div>
+            {{/courses}}
 
-    <br>
-    <a href="/course/new">New Course</a>
+            <div class="text-center">
+                <a href="/course/new" class="btn btn-primary">New Course</a>
+            </div>
+        </div>
+    </div>
 </main>
 <div th:replace="layout/layout :: footer"></div>
 </body>
