--- a/ProyectoDWS/src/main/resources/templates/courses/show_courses_for_subject.html
+++ b/ProyectoDWS/src/main/resources/templates/courses/show_courses_for_subject.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head th:replace="layout/layout :: head('Cursos para la Asignatura - AcademiaSaber', '/styles/courses/show_courses_for_subject.css')"></head>
+<head th:replace="layout/layout :: head('Cursos para la Asignatura - AcademiaSaber', '/styles/courses/show_courses_for_subject.css', '')"></head>
 <body>
 <div th:replace="layout/layout :: header"></div>
-<main>
-    <h1>Cursos para la Asignatura: <span th:text="${subject.title}"></span></h1>
-
-    <ul>
-        <li th:each="course : ${subject.associatedCourses}" th:text="${course.title}"></li>
-    </ul>
-
-    <a href="/">Volver a la página principal</a>
+<main class="container py-5">
+    <div class="card shadow mb-4">
+        <div class="card-body">
+            <h1 class="card-title mb-4">Cursos para la Asignatura: <span th:text="${subject.title}"></span></h1>
+            <ul class="list-group mb-4">
+                <li class="list-group-item" th:each="course : ${subject.associatedCourses}" th:text="${course.title}"></li>
+            </ul>
+            <a href="/" class="btn btn-secondary">Volver a la página principal</a>
+        </div>
+    </div>
 </main>
 <div th:replace="layout/layout :: footer"></div>
 </body>
