--- a/ProyectoDWS/src/main/resources/templates/errorScreens/error500.html
+++ b/ProyectoDWS/src/main/resources/templates/errorScreens/error500.html
@@ -1,11 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Error 500</title>
-  <link rel="stylesheet" href="/styles/error.css">
-  <link href="https://fonts.googleapis.com/css2?family=Tilt+Warp&display=swap" rel="stylesheet">
-</head>
+<html xmlns:th="http://www.thymeleaf.org">
+<head th:replace="layout/layout :: head('Error 500 - AcademiaSaber', '/styles/error.css', '')"></head>
 <body>
-<h1>Error 500 Internal Server Error</h1>
+<div th:replace="layout/layout :: header"></div>
+<main class="container py-5">
+  <div class="row justify-content-center">
+    <div class="col-md-6">
+      <div class="card shadow">
+        <div class="card-body text-center">
+          <h1 class="card-title mb-4">Error 500 Internal Server Error</h1>
+          <p class="mb-4">Ha ocurrido un error en el servidor, vuelve a intentarlo más tarde.</p>
+          <a href="/" class="btn btn-primary">Volver a la página principal</a>
+        </div>
+      </div>
+    </div>
+  </div>
+</main>
+<div th:replace="layout/layout :: footer"></div>
 </body>
+</html>
