--- a/ProyectoDWS/src/main/resources/templates/subjects/deleted_subject.html
+++ b/ProyectoDWS/src/main/resources/templates/subjects/deleted_subject.html
@@ -1,15 +1,20 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head th:replace="layout/layout :: head('Asignaturas - AcademiaSaber', '/styles/subjects/deleted_subject.css')"></head>
+<head th:replace="layout/layout :: head('Asignaturas - AcademiaSaber', '/styles/subjects/deleted_subject.css', '')"></head>
 <body>
 <div th:replace="layout/layout :: header"></div>
-<main>
-  <div class="wrapper">
-    <div class="container">
-      <p>Subject has been deleted.</p>
-    </div>
-    <div class="button">
-      <a href="/">Back</a>
+<main class="container py-5">
+  <div class="row justify-content-center">
+    <div class="col-md-6">
+      <div class="card shadow">
+        <div class="card-body text-center">
+          <h2 class="card-title mb-4">Asignatura Eliminada</h2>
+          <p class="card-text">La asignatura ha sido eliminada correctamente.</p>
+          <div class="mt-4">
+            <a href="/" class="btn btn-primary">Volver al Inicio</a>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 </main>
