--- a/ProyectoDWS/src/main/resources/templates/layout/layout.html
+++ b/ProyectoDWS/src/main/resources/templates/layout/layout.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head th:fragment="head(title, css, css_external)">
+<head th:fragment="head(title, css, extra_css)">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title th:text="${title}">AcademiaSaber</title>
     <link rel="stylesheet" href="/styles/app.css">
     <link rel="stylesheet" th:href="${css}">
-    <link rel="stylesheet" th:if="${css_external}" th:href="${css_external}">
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
+    <link rel="stylesheet" th:if="${extra_css}" th:href="${extra_css}">
+    <script src="/scripts/jquery/jquery-3.7.1.min.js"></script>
+    <link href="/styles/bootstrap/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
 <header th:fragment="header" class="bg-dark text-white">
@@ -23,14 +23,14 @@
                     <li class="nav-item"><a class="nav-link" href="/">INICIO</a></li>
                     <li class="nav-item"><a class="nav-link" href="/courses">CURSOS</a></li>
                     <li class="nav-item"><a class="nav-link" href="/subjects">ASIGNATURAS</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/about-us">SOBRE NOSOTROS</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/about-us">NOSOTROS</a></li>
                     <li class="nav-item"><a class="nav-link" href="/contact">CONTACTO</a></li>
                     <li class="nav-item" th:if="${admin}"><a class="nav-link" href="/users">USUARIOS</a></li>
                 </ul>
 
                 <div class="d-flex align-items-center" th:if="${logged}">
                     <a href="/profile" class="text-white text-decoration-none me-3 d-flex align-items-center">
-                        <img th:src="${userImage}" alt="Foto de perfil" class="rounded-circle me-2" style="width: 32px; height: 32px; object-fit: cover;">
+                        <img id="userImage" th:src="${userImage}" alt="Foto de perfil" class="rounded-circle me-2">
                         <span th:text="${userName}"></span>
                     </a>
                     <a href="/enrolled_courses" class="btn btn-outline-light me-2">MIS CURSOS</a>
@@ -58,6 +58,6 @@
     </div>
 </footer>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
+<script src="/scripts/bootstrap/bootstrap.bundle.min.js"></script>
 </body>
 </html>
