--- a/ProyectoDWS/src/main/resources/templates/subjects/show_subject.html
+++ b/ProyectoDWS/src/main/resources/templates/subjects/show_subject.html
@@ -16,7 +16,7 @@
                     </div>
 
                     <div class="text-center mb-4">
-                        <img th:src="@{/subject/{id}/image(id=${subject.id})}" alt="Imagen de la asignatura" class="img-fluid rounded" style="max-height: 300px;">
+                        <img id="subjectImage" th:src="@{/subject/{id}/image(id=${subject.id})}" alt="Imagen de la asignatura" class="img-fluid rounded">
                     </div>
 
                     <div class="d-grid gap-2">
